@@ -2,6 +2,9 @@ Kafka Rest API
 
 [![Test](https://github.com/HubertTatar/kafka-ra/actions/workflows/test.yml/badge.svg)](https://github.com/HubertTatar/kafka-ra/actions/workflows/test.yml)
 
+Run:
+
+Add jvm flag `--add-opens java.base/java.util.concurrent=ALL-UNNAMED` - [Understanding Runtime Access Warnings](https://docs.oracle.com/javase/9/migrate/toc.htm#JSMIG-GUID-7BB28E4D-99B3-4078-BDC4-FC24180CE82B) 
 
 
 Links:
